/* 
  Localizable.string.strings
  MayTheForceBeWith_Anderson

  Created by Anderson F Carvalho on 11/07/19.
  Copyright © 2019 asfcarvalho. All rights reserved.
*/

"People" = "People";
"URLError" = "URL error";
"Person" = "Person";
"Height" = "Height";
"Mass" = "Mass";
"BirthYear" = "Birth Year";
