...
        self.backgroundColor = UIColor.white
        
        nameLabel.text = NSLocalizedString("Name", comment: "") + ": "
        heightLabel.text = NSLocalizedString("Height", comment: "") + ": "
        massLabel.text = NSLocalizedString("Mass", comment: "") + ": "
        birthYearLabel.text = NSLocalizedString("BirthYear", comment: "") + ": "
        favoriteLabel.text = NSLocalizedString("Favorite", comment: "")
        
        let tapFavorite = UITapGestureRecognizer(target: self, action: #selector(favoriteAction))
        favoriteView.addGestureRecognizer(tapFavorite)
        favoriteView.isUserInteractionEnabled = true
        
        self.addSubview(scrollView)
...
